--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -141,8 +141,7 @@ img {
 /*==================== REUSABLE CSS CLASSES ====================*/
 
 body {
-    height: 100vh;
-
+  height: 100vh;
 }
 
 .section__title {
@@ -161,7 +160,7 @@ body {
 }
 /*==================== LAYOUT ====================*/
 
-.section{
+.section {
   margin: 1rem 0px;
 }
 
@@ -364,6 +363,7 @@ body {
   padding: 1rem;
   border-radius: 0.5rem;
   font-weight: var(--font-medium);
+  border: none;
 }
 
 .button:hover {
@@ -490,11 +490,11 @@ body {
 }
 
 .skills__css {
-  width: 75%;
+  width: 85%;
 }
 
 .skills__js {
-  width: 55%;
+  width: 80%;
 }
 
 .skills__bootstrap {
@@ -502,21 +502,33 @@ body {
 }
 
 .skills__node {
-  width: 10%;
+  width: 45%;
+}
+.skills__express {
+  width: 45%;
 }
 
 .skills__java {
-  width: 40%;
+  width: 75%;
 }
 
 .skills__dsa {
-  width: 40%;
+  width: 70%;
 }
 .skills__python {
   width: 25%;
 }
 .skills__reactJS {
-  width: 40%;
+  width: 70%;
+}
+.skills__reactNative {
+  width: 60%;
+}
+.skills__mysql {
+  width: 50%;
+}
+.skills__mongoDB {
+  width: 55%;
 }
 
 /* .skills__close .skills__list{
@@ -535,48 +547,48 @@ body {
 
 /*==================== PROJECT ====================*/
 
-.project__section{
+.project__section {
   margin-top: 4rem;
 }
-.project__container{
-    overflow: initial;
+.project__container {
+  overflow: initial;
 }
 
-.project__content{
-    padding: 0 1.5rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.project__content {
+  padding: 0 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.project__data{
+.project__data {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.project__img{
-    height: 150px;
-    width: 256px;
-    border-radius: .5rem;
-    justify-self: center;
+.project__img {
+  height: 150px;
+  width: 256px;
+  border-radius: 0.5rem;
+  justify-self: center;
 }
 
-.project__title{
-    font-size: var(--h3-font-size);
-    margin-bottom: var(--mb-0-5);
+.project__title {
+  font-size: var(--h3-font-size);
+  margin-bottom: var(--mb-0-5);
 }
 
-.project__description{
-    margin-bottom: var(--mb-0-75);
+.project__description {
+  margin-bottom: var(--mb-0-75);
 }
 
-.project__button:hover .button__icon{
-    transform: translateX(.25rem);
+.project__button:hover .button__icon {
+  transform: translateX(0.25rem);
 }
 
-.project__button{
+.project__button {
   margin-top: 1rem;
   width: 160px;
   height: 40px;
@@ -596,7 +608,7 @@ body {
   width: 300px;
   height: 350px;
 }
-.swiper-wrapper{
+.swiper-wrapper {
   max-width: 100% !important;
 }
 
@@ -605,10 +617,9 @@ body {
   width: 65%;
 }
 
-.swiper-slide:nth-child(3){
+.swiper-slide:nth-child(3) {
   transform: translate3d(0px, 0px, -1.5px);
 }
-
 
 /*==================== CONTACT ME ====================*/
 .contact__container {
@@ -642,7 +653,7 @@ body {
   padding: 0.75rem 1rem 0.25rem;
 }
 
-.contact__lable {
+.contact__label {
   font-size: var(--smaller-font-size);
   color: var(--title-color);
 }
@@ -799,9 +810,7 @@ body {
 
   .about__container {
     margin-bottom: 2rem;
-
   }
-
 }
 
 @media screen and (min-width: 768px) {
@@ -829,7 +838,9 @@ body {
   .footer__container {
     padding: 0 1rem;
   }
-
+  .header {
+    padding: 1rem;
+  }
   .nav {
     height: calc(var(--header-height)+3.5rem);
     column-gap: 1rem;
@@ -868,7 +879,6 @@ body {
   .home__scroll-button {
     margin-left: 3rem;
   }
-
 
   .about__container {
     column-gap: 5rem;
