--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -502,10 +502,10 @@ body {
 }
 
 .skills__node {
-  width: 45%;
+  width: 2 5%;
 }
 .skills__express {
-  width: 45%;
+  width: 25%;
 }
 
 .skills__java {
